--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,9 +3,9 @@
 #NotBlank = Campo é obrigatório
 NotBlank = Campo {0} é obrigatório
 name = Name
-restaurant.name = Nome do Restaurante
+restaurantInputDTO.name = Nome do Restaurante
 TaxShipping.invalid={0} is invalid.
-restaurant.taxShipping = Taxa Frete do Restaurante
+restaurantInputDTO.taxShipping = Taxa Frete do Restaurante
 Multiple={0} must be a multiple of {1}
 #PositiveOrZero.restaurant.taxShipping = Taxa Frete do Restaurant2222
 
