GroupAccess endpoint implemented

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,4 +9,10 @@ restaurantInputDTO.taxShipping = Taxa Frete do Restaurante
 Multiple={0} must be a multiple of {1}
 #PositiveOrZero.restaurant.taxShipping = Taxa Frete do Restaurant2222
 
+NotNull = {0} não pode ser vazio
+
 ValueZeroIncludeDescription = {1} must conatin  {2} 
+
+address=Endereço
+address.city=Cidade
+address.publicPlace = Logradouro
